fix rubocop run travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ services:
 script:
   - bundle exec rake db:migrate:reset RAILS_ENV=test
   - bundle exec rspec
-  - '{ git diff HEAD --name-only --diff-filter=MA & git diff origin/master..HEAD --name-only --diff-filter=MA; } | sort | uniq | xargs rubocop'
+  - bundle exec bin/rubocop
