修正 Rubocop CI 檢查，只檢查修改的檔案

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,5 @@ services:
 script:
   - bundle exec rake db:migrate:reset RAILS_ENV=test
   - bundle exec rspec
+  - git fetch origin master
   - bundle exec bin/rubocop
