--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ services:
 script:
   - bundle exec rake db:migrate:reset RAILS_ENV=test
   - bundle exec rspec
-  - bundle exec bin/rubocop
+  - git fetch origin master && master_sha1="$(cut -c -40<<<"$(cat .git/FETCH_HEAD)")" && pronto run -c $master_sha1 --exit-code
