--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -4,6 +4,7 @@
   - ['mailers', 1]
   - ['scheduler', 5]
   - ['create_order_worker', 10]
+  - ['video_worker', 10]
 :schedule:
   CheckWorker:
     cron: '30 * * * *'
