--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -3,6 +3,7 @@
   - ['default', 1]
   - ['mailers', 1]
   - ['scheduler', 5]
+  - ['robot', 5]
   - ['create_order_worker', 10]
   - ['video_worker', 10]
 :schedule:
