Setting exception_notification

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -1,6 +1,7 @@
 development:
   slack:
     slack_api_token: ''
+    webhook_url: ''
     river: ''
 
 test:
@@ -8,4 +9,5 @@ test:
 production:
   slack:
     slack_api_token: ''
+    webhook_url: ''
     river: ''
