--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 services:
   - postgresql
 script:
+  - cp config/secrets.yml.example config/secrets.yml
   - bundle exec rake db:migrate:reset RAILS_ENV=test
   - bundle exec rspec
   - bundle exec cucumber
