--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -5,6 +5,10 @@ development:
     river: ''
 
 test:
+  slack:
+    slack_api_token: ''
+    webhook_url: ''
+    river: ''
 
 production:
   slack:
