讓 Windows 10 底下 Ubuntu 執行 rspec 時，能正常運作 Capybara (chromedriver)

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - yarn
 services:
   - postgresql
+  - xvfb
 script:
   - cp config/secrets.yml.example config/secrets.yml
   - bundle exec rake db:migrate:reset RAILS_ENV=test
